test/corpus/expressions.txt
============================================
Arithmetic precedence
============================================

RETURN a + b * c

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (binary_expression
              (expression
                (identifier))
              (expression
                (binary_expression
                  (expression
                    (identifier))
                  (expression
                    (identifier)))))))))))

============================================
Boolean AND OR
============================================

RETURN x AND y OR z

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (binary_expression
              (expression
                (binary_expression
                  (expression
                    (identifier))
                  (expression
                    (identifier))))
              (expression
                (identifier)))))))))

============================================
NOT expression
============================================

RETURN NOT x

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (unary_expression
              (expression
                (identifier)))))))))

============================================
Comparison greater than
============================================

RETURN n.age > 18

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (binary_expression
              left: (expression
                (property_access
                  object: (expression
                    (identifier))
                  property: (identifier)))
              right: (expression
                (integer_literal)))))))))

============================================
String starts with
============================================

MATCH (n) WHERE n.name STARTS WITH 'A' RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (starts_with_expression
            (expression
              (property_access
                object: (expression
                  (identifier))
                property: (identifier)))
            (expression
              (string_literal))))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
String ends with
============================================

MATCH (n) WHERE n.name ENDS WITH 'e' RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (ends_with_expression
            (expression
              (property_access
                object: (expression
                  (identifier))
                property: (identifier)))
            (expression
              (string_literal))))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
String contains
============================================

MATCH (n) WHERE n.name CONTAINS 'li' RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (contains_expression
            (expression
              (property_access
                object: (expression
                  (identifier))
                property: (identifier)))
            (expression
              (string_literal))))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
IS NULL
============================================

MATCH (n) WHERE n.name IS NULL RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (is_null_expression
            (expression
              (property_access
                object: (expression
                  (identifier))
                property: (identifier)))))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
IS NOT NULL
============================================

MATCH (n) WHERE n.name IS NOT NULL RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (is_null_expression
            (expression
              (property_access
                object: (expression
                  (identifier))
                property: (identifier)))))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
IN expression
============================================

RETURN x IN [1, 2, 3]

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (in_expression
              (expression
                (identifier))
              (expression
                (list_literal
                  (expression
                    (integer_literal))
                  (expression
                    (integer_literal))
                  (expression
                    (integer_literal)))))))))))

============================================
List literal
============================================

RETURN [1, 2, 3]

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (list_literal
              (expression
                (integer_literal))
              (expression
                (integer_literal))
              (expression
                (integer_literal)))))))))

============================================
Map literal
============================================

RETURN {x: 1, y: 2}

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (map_literal
              (property_key_value
                (identifier)
                (expression
                  (integer_literal)))
              (property_key_value
                (identifier)
                (expression
                  (integer_literal))))))))))

============================================
Function call
============================================

RETURN toUpper(n.name)

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (function_call
              name: (function_name
                (identifier))
              (expression
                (property_access
                  object: (expression
                    (identifier))
                  property: (identifier))))))))))

============================================
Subscript access
============================================

RETURN list[0]

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (subscript_expression
              (expression
                (identifier))
              (expression
                (integer_literal)))))))))

============================================
ERROR - unclosed function call
============================================

RETURN toUpper(

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (function_call
              name: (function_name
                (identifier))
              (MISSING ")"))))))))

============================================
Label predicate in WHERE clause
============================================

MATCH (a) WHERE a:A RETURN a

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (is_labeled_expression
            (expression
              (identifier))
            label: (label_expression
              label_name: (identifier))))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
Label predicate combined with boolean expression
============================================

MATCH (n) WHERE n:Person AND n.active = true RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (binary_expression
            left: (expression
              (is_labeled_expression
                (expression
                  (identifier))
                label: (label_expression
                  label_name: (identifier))))
            right: (expression
              (binary_expression
                left: (expression
                  (property_access
                    object: (expression
                      (identifier))
                    property: (identifier)))
                right: (expression
                  (boolean_literal))))))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
Label predicate in RETURN
============================================

MATCH (n) RETURN n:Foo AS result

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier)))))
    (return_clause
      (return_body
        (return_item
          (expression
            (is_labeled_expression
              (expression
                (identifier))
              label: (label_expression
                label_name: (identifier))))
          alias: (identifier))))))

============================================
ERROR - label predicate with integer label
============================================

MATCH (n) WHERE n:123 RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (ERROR
          (expression
            (identifier)))
        (expression
          (integer_literal))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
ERROR - dangling operator
============================================

RETURN a +

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (binary_expression
              (expression
                (identifier))
              (expression
                (null_literal
                  (MISSING "is_null_expression_token1"))))))))))

============================================
Pattern predicate in WHERE
============================================

MATCH (n) WHERE (n)-[]->() RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (pattern_predicate
            (node_pattern
              variable: (identifier))
            (relationship_pattern)
            (node_pattern)))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
Pattern predicate with relationship type
============================================

MATCH (n) WHERE (n)-[:REL1]-() RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (pattern_predicate
            (node_pattern
              variable: (identifier))
            (relationship_pattern
              (relationship_body
                label: (label_expression
                  label_name: (identifier))))
            (node_pattern)))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
Pattern predicate negated
============================================

MATCH (n) WHERE NOT (n)-->(m) RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (unary_expression
            (expression
              (pattern_predicate
                (node_pattern
                  variable: (identifier))
                (relationship_pattern)
                (node_pattern
                  variable: (identifier))))))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
Map projection - field selectors
============================================

RETURN n { .name, .age }

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (map_projection
              object: (identifier)
              (map_projection_element
                (field_selector property: (identifier)))
              (map_projection_element
                (field_selector property: (identifier))))))))))

============================================
Map projection - all fields
============================================

RETURN n { .* }

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (map_projection
              object: (identifier)
              (map_projection_element
                (all_fields_selector)))))))))

============================================
Map projection - mixed elements
============================================

RETURN n { .name, score: 10 }

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (map_projection
              object: (identifier)
              (map_projection_element
                (field_selector property: (identifier)))
              (map_projection_element
                (literal_map_field
                  key: (identifier)
                  value: (expression (integer_literal)))))))))))

============================================
Map literal standalone (not projection)
============================================

RETURN {name: 'Alice'}

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (map_literal
              (property_key_value
                (identifier)
                (expression (string_literal))))))))))

============================================
Map projection - variable selector
============================================

RETURN n { name, .age }

---

(source_file
  (statement
    (return_clause
      (return_body
        (return_item
          (expression
            (map_projection
              object: (identifier)
              (map_projection_element
                (variable_selector variable: (identifier)))
              (map_projection_element
                (field_selector property: (identifier))))))))))
